# media_conveyor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/media_conveyor/: __init__.py  authentication.py  aws_temp.py  configurations.py  connections.py  exceptions.py  infrastructure.py  main.py  plex_data.py  plex_test.py  redis_db.py  utils.py
src/media_conveyor/testers/: aws_tester.py  plex_tester.py  redis_tester.py  redis_upload_tester.py
src/media_conveyor_site/: manage.py
src/media_conveyor_site/downloading/: apps.py
src/media_conveyor_site/file_packaging/: apps.py
src/media_conveyor_site/media_conveyor_site/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/media_conveyor_site/pages/: urls.py  views.py
src/media_conveyor_site/pages/static/pages/css/: main_page.css  test_style.css
src/media_conveyor_site/pages/static/pages/js/: media_container.js
src/media_conveyor_site/pages/templates/pages/: divi.html  main.html  media.html  media_01.html  media_container.html  tmp.html
src/media_conveyor_site/templates/: index.html
src/media_conveyor_site/testing/: apps.py  urls.py  views.py
src/media_conveyor_site/testing/static/js/: file.js
src/media_conveyor_site/testing/templates/testing/: display_text.html  main_template.html
tests/.media_conveyor/configs/aws/: ec2.json  elasticache_cluster.json
tests/.media_conveyor/infrastructure_configs/aws/: elasticache_replication_group.json  subnet.json  vpc.json
tests/.media_conveyor/state_configs/aws/: ec2.json  elasticache_replication_group.json  security_group.json
tests/configs/aws/: ec2.json  elasticache.json  security_group.json
tests/data_samples/redis/: artist_data_sample.json  movie_data_sample.json  show_data_sample.json
