[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/media_conveyor/version.py"
version_scheme = "release-branch-semver"

[project]
name = "media_conveyor"
description = "A tool for creating a Redis Elasticache db of local media content on AWS as well as a web interface which users can download the displayed media"
authors = [{name = "James Berkheirmrt", email = "james.berkheimer@gmail.com"}]
license = {text = "MIT"}
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "boto3",
    "colorlog",
    "django",
    "djangorestframework",
    "jinja2",
    "json5",
    "redis",
    "pillow",
    "plexapi",
    "pydantic",
    "sshtunnel",
]


[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
main = "media_conveyor.main:main"
db = "media_conveyor.main:test_db"
check = "media_conveyor.main:check_db"
plex = "media_conveyor.testers.plex_tester:main"
plex_test = "media_conveyor.testers.plex_tester:plex_test"
awsr = "media_conveyor.testers.aws_tester:aws_run"
awst = "media_conveyor.testers.aws_tester:aws_test"
awss = "media_conveyor.testers.aws_tester:aws_stop"
rup = "media_conveyor.testers.redis_upload_tester:upload"
rping = "media_conveyor.testers.redis_tester:ping"
rwrite = "media_conveyor.testers.redis_tester:write"
rread = "media_conveyor.testers.redis_tester:read"
rdelete = "media_conveyor.testers.redis_tester:delete_db"

[project.optional-dependencies]
dev = [
    "ruff",
    "tox",
    "build",
    "pytest",
    "coverage"
]

[tool.setuptools]
include-package-data = true
platforms = ["any"]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = true
where = ["src"]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".cache",
    ".direnv",
    ".eggs",
    "*.egg-info",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    "*.pyc",
    "__pycache__",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".code-workspace"
]
select = ["B", "C", "E", "F", "N", "W", "B9"]
ignore = [
    "E203",
    "E501",
    "E722",
    "N802",
    "F401"
]
line-length = 100